--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
 body {
   background-color: blanchedalmond;
 }
+
+#yellow {
+  background-color: yellow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#green {
+  background-color: green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#black {
+  background-color: black;
+  color: wheat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#red {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#cornflower-blue {
+  background-color: cornflowerblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+button:hover {
+  cursor: pointer;
+}
